# metadit

./: .gitignore  README.md  calc_aae.py  calc_aarandk.py  datapipe.py  engine.py  generate.py  loggers.py  main.py  metric.py  pyproject.toml  readme.md  requirements.txt  utils.py
diffusion/: __init__.py  gaussian_diffusion.py  respace.py
model/: clip_model.py  dit.py  modeling_output.py  modules.py  spec_encoder.py  surrogate.py
scripts/: evaluate.sh  metric.sh  test_metadit.sh  train_clip.sh  train_metadit.sh  train_surrogate.sh  zero2.json
test/: test_metadit.py  test_surrogate.py
train/: train_clip.py  train_metadit.py  train_surrogate.py
