[project]
name = "metadit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.8.1",
    "deepspeed==0.17.1",
    "einops==0.8.1",
    "huggingface-hub==0.33.1",
    "jinja2==3.1.6",
    "markdown==3.8.2",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "ninja==1.11.1.4",
    "numpy==2.3.1",
    "open-clip-torch==2.32.0",
    "openai-clip==1.0.1",
    "pillow==11.2.1",
    "pycocotools==2.0.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "sentencepiece==0.2.0",
    "setuptools==78.1.1",
    "sympy==1.14.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tiktoken==0.9.0",
    "timm==1.0.16",
    "tokenizers==0.21.2",
    "transformers==4.53.0",
    "triton==3.3.1",
    "wandb==0.20.1",
    "wheel==0.45.1",
]
